--- a/faz/index.html
+++ b/faz/index.html
@@ -18,7 +18,9 @@
   </head>
   <body>
     <div class="section">
-      <h1 class="title is-1">FAZ</h1>
+      <a href="/faz">
+        <h1 class="title is-1">FAZ</h1>
+      </a>
     </div>
 
     <div class="section">
