--- a/faz/index.html
+++ b/faz/index.html
@@ -14,6 +14,10 @@
       .w-4 {
         width: 1rem;
       }
+
+      .touch-manipulation {
+        touch-action: manipulation;
+      }
     </style>
   </head>
   <body>
@@ -26,7 +30,7 @@
     <div class="section">
       <div class="level">
         <div class="level-item">
-          <button id="back" class="button mr-6">«</button>
+          <button id="back" class="button mr-6 touch-manipulation">«</button>
 
           <div class="buttons has-addons mb-0 mr-6">
             <a id="page" class="button is-primary mb-0">
@@ -43,7 +47,7 @@
             </a>
           </div>
 
-          <button id="forward" class="button">»</button>
+          <button id="forward" class="button touch-manipulation">»</button>
         </div>
       </div>
     </div>
@@ -58,7 +62,7 @@
       </div>
     </div>
 
-    <div class="footer">
+    <div class="section">
       <div class="level">
         <div class="level-item">
           <div class="buttons level-item has-addons mb-0 mr-6">
