switch external links vs same-tab

--- a/faz/index.html
+++ b/faz/index.html
@@ -33,16 +33,16 @@
           <button id="back" class="button mr-6 touch-manipulation">«</button>
 
           <div class="buttons has-addons mb-0 mr-6">
-            <a id="page" class="button is-primary mb-0">
-              <p class="mr-2">Seite</p>
-              <p id="page-number" class="has-text-weight-bold is-size-4">1</p>
-            </a>
             <a
-              id="page-ext"
-              class="button is-light mb-0"
+              id="page"
+              class="button is-primary mb-0"
               target="_blank"
               rel="noopener noreferrer"
             >
+              <p class="mr-2">Seite</p>
+              <p id="page-number" class="has-text-weight-bold is-size-4">1</p>
+            </a>
+            <a id="page-ext" class="button is-light mb-0">
               <img src="/external.svg" class="w-4" />
             </a>
           </div>
@@ -68,6 +68,8 @@
           <div class="buttons level-item has-addons mb-0 mr-6">
             <a
               class="button is-info mb-0"
+              target="_blank"
+              rel="noopener noreferrer"
               href="https://login.emedien.ub.uni-muenchen.de/login?qurl=https://ptrck.eu/faz"
             >
               Login
@@ -75,8 +77,6 @@
             <a
               id="page-ext"
               class="button is-light mb-0"
-              target="_blank"
-              rel="noopener noreferrer"
               href="https://login.emedien.ub.uni-muenchen.de/login?qurl=https://ptrck.eu/faz"
             >
               <img src="/external.svg" class="w-4" />
@@ -86,6 +86,8 @@
           <div class="buttons level-item has-addons mb-0">
             <a
               class="button is-info mb-0"
+              target="_blank"
+              rel="noopener noreferrer"
               href="https://login.emedien.ub.uni-muenchen.de/login"
             >
               Login2
@@ -93,8 +95,6 @@
             <a
               id="page-ext"
               class="button is-light mb-0"
-              target="_blank"
-              rel="noopener noreferrer"
               href="https://login.emedien.ub.uni-muenchen.de/login"
             >
               <img src="/external.svg" class="w-4" />
