--- a/faz/index.html
+++ b/faz/index.html
@@ -30,12 +30,17 @@
     <div class="section">
       <div class="level">
         <div class="level-item">
-          <button id="back" class="button mr-6 touch-manipulation">«</button>
+          <button
+            id="back"
+            class="button mr-6 has-text-weight-bold touch-manipulation"
+          >
+            «
+          </button>
 
           <div class="buttons has-addons mb-0 mr-6">
             <a
               id="page"
-              class="button is-primary mb-0"
+              class="button is-primary mb-0 px-5"
               target="_blank"
               rel="noopener noreferrer"
             >
@@ -47,7 +52,12 @@
             </a>
           </div>
 
-          <button id="forward" class="button touch-manipulation">»</button>
+          <button
+            id="forward"
+            class="button has-text-weight-bold touch-manipulation"
+          >
+            »
+          </button>
         </div>
       </div>
     </div>
