only one main login button

--- a/faz/index.html
+++ b/faz/index.html
@@ -75,40 +75,34 @@
     <div class="section">
       <div class="level">
         <div class="level-item">
-          <div class="buttons level-item has-addons mb-0 mr-6">
-            <a
-              class="button is-info mb-0"
-              target="_blank"
-              rel="noopener noreferrer"
-              href="https://login.emedien.ub.uni-muenchen.de/login?qurl=https://ptrck.eu/faz"
-            >
-              Login
-            </a>
-            <a
-              id="page-ext"
-              class="button is-light mb-0"
-              href="https://login.emedien.ub.uni-muenchen.de/login?qurl=https://ptrck.eu/faz"
-            >
-              <img src="/external.svg" class="w-4" />
-            </a>
-          </div>
+          <div>
+            <div class="buttons has-addons mb-1">
+              <a
+                class="button is-info mb-0 px-5"
+                target="_blank"
+                rel="noopener noreferrer"
+                href="https://login.emedien.ub.uni-muenchen.de/login"
+              >
+                Login
+              </a>
+              <a
+                id="page-ext"
+                class="button is-light mb-0"
+                href="https://login.emedien.ub.uni-muenchen.de/login"
+              >
+                <img src="/external.svg" class="w-4" />
+              </a>
+            </div>
 
-          <div class="buttons level-item has-addons mb-0">
-            <a
-              class="button is-info mb-0"
-              target="_blank"
-              rel="noopener noreferrer"
-              href="https://login.emedien.ub.uni-muenchen.de/login"
-            >
-              Login2
-            </a>
-            <a
-              id="page-ext"
-              class="button is-light mb-0"
-              href="https://login.emedien.ub.uni-muenchen.de/login"
-            >
-              <img src="/external.svg" class="w-4" />
-            </a>
+            <div class="level-item mb-0">
+              <a
+                class="button is-ghost mb-0"
+                href="https://login.emedien.ub.uni-muenchen.de/login?qurl=https://ptrck.eu/faz"
+                style="line-height: 1"
+              >
+                Login + redirect
+              </a>
+            </div>
           </div>
         </div>
       </div>
