switch external link vs same-tab

--- a/faz/index.html
+++ b/faz/index.html
@@ -40,16 +40,16 @@
           </button>
 
           <div class="buttons has-addons mb-0 mr-6">
-            <a
-              id="page"
-              class="button is-primary mb-0 px-5"
-              target="_blank"
-              rel="noopener noreferrer"
-            >
+            <a id="page" class="button is-primary mb-0 px-6">
               <p class="mr-2">Seite</p>
               <p id="page-number" class="has-text-weight-bold is-size-4">1</p>
             </a>
-            <a id="page-ext" class="button is-light mb-0">
+            <a
+              id="page-ext"
+              class="button is-light mb-0"
+              target="_blank"
+              rel="noopener noreferrer"
+            >
               <img src="/external.svg" class="w-4" />
             </a>
           </div>
