--- a/faz/index.html
+++ b/faz/index.html
@@ -78,25 +78,18 @@
       <div class="level">
         <div class="level-item">
           <div>
-            <div class="buttons has-addons mb-1">
+            <div class="level-item mb-0 p-0">
               <a
-                class="button is-info mb-0 px-5"
+                class="button is-info mb-1 px-6"
                 target="_blank"
                 rel="noopener noreferrer"
                 href="https://login.emedien.ub.uni-muenchen.de/login"
               >
                 Login
               </a>
-              <a
-                id="page-ext"
-                class="button is-light mb-0"
-                href="https://login.emedien.ub.uni-muenchen.de/login"
-              >
-                <img src="/external.svg" class="w-4" />
-              </a>
             </div>
 
-            <div class="level-item mb-0">
+            <div class="level-item mb-0 p-0">
               <a
                 class="button is-ghost mb-0"
                 href="https://login.emedien.ub.uni-muenchen.de/login?qurl=https://ptrck.eu/faz"
