--- a/faz/index.html
+++ b/faz/index.html
@@ -144,6 +144,7 @@
       const datepicker = new Datepicker(datepickerEl, {
         calendarWeeks: true,
         daysOfWeekHighlighted: [0],
+        minDate: new Date("1949-11-01"),
         maxDate: new Date(),
         language: "de",
         todayHighlight: true,
